force-app/main/default/objects/Inventory_c__c/Inventory_c__c.object-meta.xml
<CustomObject>
    <label>Inventory__c</label>
    <nameField>
        <label>Inventory__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>