force-app/main/default/objects/Inventory_c__c/fields/Medicine_Link__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine Link</label>
    <referenceTo>Medicine_c__c</referenceTo>
    <relationshipLabel>Medicine</relationshipLabel>
    <relationshipName>Medicine</relationshipName>
    <type>Lookup</type>
</CustomField>