force-app/main/default/objects/Inventory_c__c/fields/Reorder_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Indicator__c</fullName>
    <formula>IF(Quantity_On_Hand__c &lt;= Reorder_Threshold__c, &quot;⚠️ REORDER NEEDED&quot;, &quot;🟢 STOCK OK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder Indicator</label>
    <type>Text</type>
</CustomField>