force-app/main/default/objects/Inventory_c__c/validationRules/expiry.validationRule-meta.xml
<ValidationRule>
    <fullName>expiry</fullName>
    <active>true</active>
    <errorConditionFormula>Expiration_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>&quot;Expired inventory items
cannot be added to
stock.&quot;</errorMessage>
</ValidationRule>