force-app/main/default/objects/Inventory_c__c/validationRules/Inventory.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_On_Hand__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity_On_Hand__c</errorDisplayField>
    <errorMessage>&quot;Physical inventory
quantities cannot fall
below zero.&quot;</errorMessage>
</ValidationRule>